Geometry Nodes: Muted bake node still do not propagate attributes #120874

Closed
opened 2024-04-21 14:11:44 +02:00 by ugorek · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.33

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-20 20:34, hash: 8392f69e106c
Worked: Never.

Short description of error
Muted Bake node still do not propagate anonymous attributes.

Exact steps for others to reproduce the error

  1. Capture any attribute on geometry.
  2. Change this geometry by any node (for example, Extrude Mesh one).
  3. Pass this geometry though muted Bake node.
  4. Try to view captured attribute.
    There is no attribute.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.33 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-20 20:34, hash: `8392f69e106c` Worked: Never. **Short description of error** Muted `Bake` node still do not propagate anonymous attributes. **Exact steps for others to reproduce the error** 1. Capture any attribute on geometry. 2. Change this geometry by any node (for example, Extrude Mesh one). 3. Pass this geometry though muted Bake node. 4. Try to view captured attribute. There is no attribute.
ugorek added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-21 14:11:45 +02:00
Iliya Katushenock changed title from The muted BakeNode does not allow the anonymous attribute of the Instance to pass through, and Blender crashes if the NodeGroupOutput is removed. to The muted BakeNode does not allow the anonymous attribute of the Instance to pass through 2024-04-21 14:14:06 +02:00

Please, send and Blender crashes if the NodeGroupOutput is removed. as separate report.

Please, send `and Blender crashes if the NodeGroupOutput is removed.` as separate report.
Iliya Katushenock self-assigned this 2024-04-21 15:42:22 +02:00
Iliya Katushenock changed title from The muted BakeNode does not allow the anonymous attribute of the Instance to pass through to Geometry Nodes: Muted bake node still do not propagate attributes 2024-04-21 15:42:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-22 20:11:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120874
No description provided.